fix UI elements being used before initialization

commit 18bc7e43 introduced calls to setRevealPasswordAvailable() on
password fields.

those calls happened before m_ui->password and m_ui->customPassword
were initialized by the call to m_ui->setupUI(),
and led to a crash when trying to open the settings of an IMAP account.

BUG: 439991